Changes to be committed:
modified:   .gitignore
modified:   src/app/home/home.component.html
modified:   src/app/home/home.component.ts
modified:   src/app/home/home.service.ts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,7 @@
                         <textarea nz-input [formControlName]="'assistant'" rows="8" spellcheck="true" autocomplete="off" required></textarea>
                     </div>
                     <div class="app-text-center">
-                        <button nz-button [nzType]="'primary'" [disabled]="throttle || generateJSONLStatus == 'PROCESS' || generateJSONLFormGroup.invalid">
+                        <button nz-button [nzType]="'primary'" [disabled]="generateJSONLStatus == 'PROCESS' || generateJSONLFormGroup.invalid">
                             <b>ADD</b>
                         </button>
                     </div>
