Changes to be committed:
modified:   .vscode/settings.json
modified:   server.ts
modified:   server/controller/jsonl.controller.ts
modified:   server/services/jsonl.service.ts
modified:   src/app/app.routes.ts
new file:   src/app/dataset/dataset.component.html
new file:   src/app/dataset/dataset.component.less
new file:   src/app/dataset/dataset.component.spec.ts
new file:   src/app/dataset/dataset.component.ts
new file:   src/app/dataset/dataset.resolver.spec.ts
new file:   src/app/dataset/dataset.resolver.ts
new file:   src/app/dataset/dataset.service.spec.ts
new file:   src/app/dataset/dataset.service.ts
modified:   src/app/home/home.component.html
modified:   src/app/home/home.component.ts
new file:   src/app/home/home.resolver.spec.ts
new file:   src/app/home/home.resolver.ts
modified:   src/app/home/home.service.ts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,6 +21,8 @@
                     <div class="app-margin">
                         <div class="app-margin-xsmall-bottom">
                             <b nz-typography>Name</b>
+                            <br>
+                            <span nz-typography [nzType]="'secondary'">Input the same name to add the dataset</span>
                         </div>
                         <input nz-input [formControlName]="'name'" placeholder="Math tutor" type="text" spellcheck="true" autocomplete="off" minlength="3" maxlength="64" required>
                     </div>
@@ -75,7 +77,7 @@
                                         </button>
                                     </span>
                                     <span *nzSpaceItem nz-typography>
-                                        <b>{{ dataset }}</b>
+                                        <a [routerLink]="['storage', 'dataset', dataset]">{{ dataset }}</a>
                                     </span>
                                 </nz-space>
                             </li>
@@ -121,7 +123,7 @@
                                 <p nz-typography class="app-margin-remove">Supports .gif, .jpg, .jpeg, .png, or .webp (15 pages, 19MB each)</p>
                             </div>
                         </div>
-                        <div class="app-margin">
+                        <div class="app-margin-small-bottom">
                             <div class="app-margin-xsmall-bottom">
                                 <div>
                                     <label nz-checkbox [formControlName]="'removeNewLines'" [nzDisabled]="imageOCRStatus != 'DONE'">
