--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -25,3 +25,17 @@
         margin-bottom: 4px;
     }
 }
+
+.app-container-cnoref {
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 8px;
+
+    input {
+        margin-right: 4px;
+    }
+
+    .app-create-cnoref {
+        flex: 0 0 auto;
+    }
+}
