--- a/src/styles.less
+++ b/src/styles.less
@@ -3,8 +3,10 @@
 
 // Components
 @import "node_modules/ng-zorro-antd/alert/style/entry.less";
+@import "node_modules/ng-zorro-antd/badge/style/entry.less";
 @import "node_modules/ng-zorro-antd/button/style/entry.less";
 @import "node_modules/ng-zorro-antd/checkbox/style/entry.less";
+@import "node_modules/ng-zorro-antd/divider/style/entry.less";
 @import "node_modules/ng-zorro-antd/icon/style/entry.less";
 @import "node_modules/ng-zorro-antd/image/style/entry.less";
 @import "node_modules/ng-zorro-antd/input/style/entry.less";
