--- a/src/styles.less
+++ b/src/styles.less
@@ -15,6 +15,7 @@
 @import "node_modules/ng-zorro-antd/select/style/entry.less";
 @import "node_modules/ng-zorro-antd/space/style/entry.less";
 @import "node_modules/ng-zorro-antd/spin/style/entry.less";
+@import "node_modules/ng-zorro-antd/table/style/entry.less";
 @import "node_modules/ng-zorro-antd/typography/style/entry.less";
 
 // Variables
